# trading

./: .gitignore  README.md  docker-compose.yaml  homebroker.py  main.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
broker/: __init__.py  broker.py  order.py  order.py.notused
broker/test/: broker_test.py
homebroker/: __init__.py  homebroker.py
scripts/: build-run.sh  install-broker.sh  install-strategy.sh
src/: main.py  menu.py  tickers.py
src/broker/: README.md  broker.py  pyproject.toml  setup.py
src/broker/auth/: __init__.py  auth.py
src/broker/auth/test/: auth_test.py
src/broker/broker/: __init__.py  broker.py
src/broker/broker/auth/: auth.py
src/broker/broker/auth/test/: auth_test.py
src/broker/broker/test/: broker_test.py
src/broker/test/: broker_test.py
src/menu-app/: main.py  menu.py  tickers.py
src/samples/: cocosbot.py  markowitz-vs-1N.py
src/strategy/: __init__.py  setup.py  strategy.py
src/strategy-app/: strategy-app.py
src/strategy/strategy/: __init__.py
src/strategy/strategy/median_mad/: __init__.py  median_mad.py
src/strategy/strategy/median_mad/test/: strategy_test.py
src/strategy/strategy/one_over_n/: __init__.py  one_over_n.py
src/strategy/strategy/one_over_n/test/: strategy_test.py
src/strategy_app/: strategy_app.py
