[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Broker"
version = "0.0.1"
authors = [
  { name="Federico Roux", email="rouxfederico@gmail.com" },
]
description = "Broker wrapper for pyhomebroker"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [ 
    { include = "Auth", from = "auth" }
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

